# EasyGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
EasyGL/: Application.cpp  Application.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  EasyGL.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Uniform.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h  base.h  log.h
EasyGL/include/EasyGL/: Application.h  Buffer.h  EasyGL.h  Shader.h  ShaderProgram.h  Texture.h  VertexArray.h  VertexBuffer.h  common.h
EasyGL/src/: Application.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
demo/: 01.triangle.cpp  02.transform.cpp  03.texture.cpp  04.cube.cpp  05.coordinate.cpp  06.camera.cpp  07.lighting.cpp  CMakeLists.txt
demos/: texture.cpp  triangle.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
